--- a/gbl2.1/manifest.json
+++ b/gbl2.1/manifest.json
@@ -11,7 +11,7 @@
   "content_scripts": [
         {
             "matches": ["https://www.btc-gbl.com/*","https://btc-gbl.com/*"],
-            "js": ["jquery.js","socket.io.js","t.js","gbl.js"],
+            "js": ["jquery.js","utils.js","socket.io.js","t.js","gbl.js"],
             "css":["gbl.css"],
             "run_at": "document_end"
         }
