--- a/gbl2.1/manifest.json
+++ b/gbl2.1/manifest.json
@@ -5,17 +5,23 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "bit.png"
-
+    "default_icon": "bit.png"//,
+   // "default_popup":"popup.html"
   },
   "content_scripts": [
         {
-            "matches": ["https://www.btc-gbl.com/*","https://btc-gbl.com/*"],
+            "matches": ["https://www.btc-gbl.com/*","https://btc-gbl.com/*","https://btc-gbl.biz/*","https://btc-gbl.biz/*"],
             "js": ["jquery.js","utils.js","socket.io.js","t.js","gbl.js"],
             "css":["gbl.css"],
             "run_at": "document_end"
         }
     ],
+    "background":{
+       // "page":"popup.html",
+        "persistent":true,
+        "scripts":["socket.io.js","background.js"]
+    },
+
     "permissions": [
         "tabs",
         "notifications",
